src/objects/Account_Portal_Company__c.object
<CustomObject>
    <fields>
        <fullName>ALookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account_Portal_Company (Account)</relationshipLabel>
        <relationshipName>Portal_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account_Portal_Company</relationshipLabel>
        <relationshipName>Account_Portal_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Portal_Id__c</fullName>
        <label>Company Portal Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarkDeleted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MarkDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Portal Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account_Portal_Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account_Portal_Company</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>